@@ -50,7 +50,7 @@
  ;CLIENTAUTH                  = OFF                             ;SSL client authorization [ON|AUTO|OFF]
 
   KEYSTORE                    = ./keystore                      ;keystore path
- ;TYPE                        = JKS                             ;keystore type
+  TYPE                        = PKCS12                          ;keystore type
  ;ALGORITHM                   = SunX509                         ;keystore encryption algorithm
   PASSWORD                    = changeIt                        ;keystore password
 
