@@ -969,7 +969,7 @@
             CLIENTAUTH = OFF
 
             KEYSTORE   = keystore
-            TYPE       = JKS
+            TYPE       = PKCS12
             ALGORITHM  = SunX509
             PASSWORD   = changeIt
             ...
@@ -1054,13 +1054,13 @@
           Server- und Client-Zertifikate lassen sich wie folgt selbst erstellen:
         </header>
         <pre>
-          ./java/bin/keytool -genkeypair -alias Server -keyalg RSA -keysize 2048 -validity 365
-                             -dname 'CN=Server'
-                             -keystore server.jks -keypass changeIt -storepass changeIt
+          ./java/bin/keytool -genkeypair -alias Server -dname 'CN=Server' -validity 365
+                             -keystore server.keystore -keyalg RSA -keysize 2048 -keypass changeIt
+                             -storetype PKCS12 -storepass changeIt
         </pre>
         <pre>
           ./java/bin/keytool -exportcert -alias Server -file server.cer
-                             -keystore server.jks -storepass changeIt
+                             -keystore server.keystore -storepass changeIt
         </pre>
         <p>
           Der Keystore f&uuml;r den Client wird erstellt und das
@@ -1070,13 +1070,13 @@
           vom Client-Zertifikat ben&ouml;tigt.
         </p>
         <pre>
-          ./java/bin/keytool -genkeypair -alias Client -keyalg RSA -keysize 2048 -validity 365
-                             -dname 'CN=Client'
-                             -keystore client.jks -keypass changeIt -storepass changeIt
+          ./java/bin/keytool -genkeypair -alias Client -dname 'CN=Client' -validity 365 
+                             -keystore client.keystore -keyalg RSA -keysize 2048 -keypass changeIt
+                             -storetype PKCS12 -storepass changeIt
         </pre>
         <pre>
           ./java/bin/keytool -exportcert -alias Client -file client.cer
-                             -keystore client.jks -storepass changeIt
+                             -keystore client.keystore -storepass changeIt
         </pre>
         <p>
           Die Keystores vom Server und Client werden gegenseitig migriert.<br>
@@ -1084,12 +1084,12 @@
         </p>
         <pre>
           ./java/bin/keytool -importcert -alias Client -file client.cer
-                             -keystore server.jks -storepass changeIt
+                             -keystore server.keystore -storepass changeIt
                              -noprompt
         </pre>
         <pre>
           ./java/bin/keytool -importcert -alias Server -file server.cer
-                             -keystore client.jks -storepass changeIt
+                             -keystore client.keystore -storepass changeIt
                              -noprompt
         </pre>
         <p>
@@ -1101,14 +1101,14 @@
         </p>
         <pre>
           ./java/bin/keytool -importkeystore
-                             -srckeystore server.jks -srcstorepass changeIt
+                             -srckeystore server.keystore -srcstorepass changeIt
                              -destkeystore server.p12 -deststoretype PKCS12
                              -keypass changeIt -storepass changeIt
                              -noprompt
         </pre>
         <pre>
           ./java/bin/keytool -importkeystore -alias ClientA
-                             -srckeystore client.jks -srcstorepass changeIt
+                             -srckeystore client.keystore -srcstorepass changeIt
                              -destkeystore client.p12 -deststoretype PKCS12
                              -keypass changeIt -storepass changeIt
                              -noprompt
